# Rust

./: .gitignore  README.md  go.sh
.continue/prompts/: test.prompt
application/: Cargo.toml  fichier.db
application/src/: Rust.code-workspace  main.rs  parallele.rs  processus.rs  verification.rs
application/src/pages/: authentification.rs  mod.rs  utilisateurs.rs
application/www/: index.html  manifest.json  test.html
application/www/html/0/: manifest.json
application/www/html/0/css/: couleurs.css  popup.css  style.css  tableau.css
application/www/html/0/js/: ajax.js  event.js  langue.js  popup.js  tableau.js  verification.js
application/www/html/0/js/worker/: main.js  service_worker.js  web_worker.js
application/www/html/0/langue/fr/: index.html
application/www/html/0/wasm/: lisezMoi.txt
web_assembly/: Cargo.toml
web_assembly/src/: lib.rs
